# pygrab

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py
app/api/v1/: injest.py  loki.py  traces.py
app/application/: dependencies.py  interfaces.py
app/application/collector/: labels.py  parser.py  worker.py
app/application/dto/: logs.py
app/application/logs/: buffer.py  service.py  services.py  worker.py
app/application/query/: parser.py  service.py
app/application/schemas/: otlp.py
app/application/traces/: converter.py  service.py
app/application/utils/: loki_helpers.py  time_parser.py  tui_formatter.py
app/core/: config.py  dependencies.py  exceptions.py
app/domain/: enums.py  models.py
app/infrastructure/clickhouse/: client.py  factory.py  pool.py  protocol.py  repository.py
app/infrastructure/clickhouse/repos/: logs.py  traces.py
migrations/: 20260701103936_create_logs_table.sql  20260704075326_create_spans_table.sql
tests/: conftest.py  test_collector.py  test_ingest.py  test_logql_parser.py  test_loki_push.py  test_query.py
tui/: Cargo.toml  api_client.py  app.py  config.py  main.py  tui.css  tui_app.py  ui.py
tui/src/: app.rs  client.rs  config.rs  main.rs  ui.rs  ui_traces.rs
