[project]
name = "pygrab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodocker>=0.27.0",
    "clickhouse-connect>=1.4.1",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "textual>=8.2.8",
    "tomli>=2.4.1",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
]
