[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.28"      
crossterm = "0.27"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"          